--- a/css/pages.css
+++ b/css/pages.css
@@ -69,3 +69,39 @@ nav img{
 }
 
  /* About Us part finish */
+ /* Project part start */
+ .center h2{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+    color: aliceblue;
+    font-weight: bold;
+ }
+
+ .projects-content{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    
+ }
+
+ .row img{
+    width: 500px;
+    height: 300px;
+    margin: 30px;
+    
+ }
+
+ .row{
+    border-radius: 3px;
+    background-color: aliceblue;
+    box-shadow: 0px 0px 10px black;
+    margin: 50px;
+ }
+
+ .row p{
+    text-align: center;
+    color: aliceblue;
+    font-size: large;
+ }
+ 
